# pycider

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  pycider.rst  usage.rst
examples/grpc_server/: .gitignore  README.md  pyproject.toml
examples/grpc_server/grpc_server/: __main__.py  aggregate.py  server.py  types.py
examples/grpc_server/grpc_server/proto/: updater.proto
examples/grpc_server/tests/: test_grpc_server.py  test_main.py
examples/sudoku_solver/: pyproject.toml
examples/sudoku_solver/sudoku_solver/: __main__.py  aggregate.py  decider.py  process.py  types.py
examples/sudoku_solver/sudoku_solver/sudoku/: evaluator.py  model.py
examples/sudoku_solver/tests/: test_sudoku_solver.py
pycider/: __main__.py  deciders.py  processes.py  procs.py  run.py  types.py
tests/: test_compositions.py
