[tool.poetry]
name = "grpc-server"
version = "0.1.0"
description = ""
authors = ["Melody Asper <melodyaheath@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pycider = {path = "../.."}


[tool.poetry.group.dev.dependencies]
grpcio = "^1.67.1"
grpcio-tools = "^1.67.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
